<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">


    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/restaurantImageDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blank_pic" />

    <TextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="restaurantName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restaurantImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurantAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="restaurantAddress"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restaurantImage"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName" />

    <TextView
        android:id="@+id/restaurantPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="restaurantNumber"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restaurantImage"
        app:layout_constraintTop_toBottomOf="@+id/restaurantAddress" />

    <TextView
        android:id="@+id/restaurantPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="restaurantPrice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/restaurantImage"
        app:layout_constraintTop_toBottomOf="@+id/restaurantPhoneNumber" />

    <RatingBar
        android:id="@+id/rbRestaurant"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="3"
        android:scaleX=".5"
        android:scaleY=".5"
        android:stepSize=".5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/restaurantImage"
        app:layout_constraintTop_toBottomOf="@+id/restaurantPrice" />

    <Button
        android:id="@+id/callBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/callButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbRestaurant" />

    <Button
        android:id="@+id/directionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/directionsButton"
        app:layout_constraintEnd_toStartOf="@+id/websiteBtn"
        app:layout_constraintStart_toEndOf="@+id/callBtn"
        app:layout_constraintTop_toBottomOf="@+id/rbRestaurant" />

    <TableLayout
        android:id="@+id/restaurantHours"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callBtn">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/hours"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursMondayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/monday"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/hoursMondayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursTuesdayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/hoursTuesdayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursWednesdayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/wednesday" />

            <TextView
                android:id="@+id/hoursWednesdayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursThursdayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/hoursThursdayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursFridayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/hoursFridayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursSaturdayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/saturday" />

            <TextView
                android:id="@+id/hoursSaturdayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hoursSundayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/sunday"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/hoursSundayHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/websiteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/websiteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbRestaurant" />

    <Button
        android:id="@+id/bookmarkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/restaurantBookmarkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantHours" />

</androidx.constraintlayout.widget.ConstraintLayout>